changed icon and some font style

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,10 @@ header {
   header h1 {
     font-size: 40px; }
   header h2 {
-    font-size: 32px; }
+    font-size: 32px;
+    font-family: "Roboto Mono"; }
+  header p {
+    font-family: "Roboto Mono"; }
 
 .coming-soon {
   font-family: "Roboto Mono";
