--- a/sass/main.scss
+++ b/sass/main.scss
@@ -75,6 +75,11 @@ header {
 
   h2 {
     font-size: 32px;
+    font-family: "Roboto Mono";
+  }
+
+  p {
+    font-family: "Roboto Mono";
   }
 }
 
