change custom fonts

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,17 @@
 @font-face {
-  font-family: "Gravity";
-  src: url("../fonts/gravity/Gravity-Regular.otf");
+  font-family: "Modernist";
+  src: url("../fonts/modernist/Sk-Modernist-Regular.otf");
 }
 
 @font-face {
-  font-family: "Gravity";
-  src: url("../fonts/gravity/Gravity-Bold.otf");
+  font-family: "Modernist";
+  src: url("../fonts/modernist/Sk-Modernist-Bold.otf");
   font-weight: bold;
 }
 
 @font-face {
-  font-family: "Gravity";
-  src: url("../fonts/gravity/Gravity-Italic.otf");
-  font-style: italic;
+  font-family: "Modernist Mono";
+  src: url("../fonts/modernist/Sk-Modernist-Mono.otf");
 }
 
 /* primary color pallete */
@@ -22,7 +21,7 @@ $white: #FFF;
 $black: #000;
 
 /* system fonts */
-$systemfonts: "Gravity", sans-serif;
+$systemfonts: "Modernist", sans-serif;
 
 * {
   box-sizing: border-box;
@@ -75,16 +74,16 @@ header {
 
   h2 {
     font-size: 32px;
-    font-family: "Roboto Mono";
+    font-family: "Modernist Mono";
   }
 
   p {
-    font-family: "Roboto Mono";
+    font-family: "Modernist Mono";
   }
 }
 
 .coming-soon {
-  font-family: "Roboto Mono";
+  font-family: "Modernist Mono";
   position: absolute;
   bottom: 10px;
   right: -40px;
