--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,13 @@
 @font-face {
-  font-family: "Gravity";
-  src: url("../fonts/gravity/Gravity-Regular.otf"); }
+  font-family: "Modernist";
+  src: url("../fonts/modernist/Sk-Modernist-Regular.otf"); }
 @font-face {
-  font-family: "Gravity";
-  src: url("../fonts/gravity/Gravity-Bold.otf");
+  font-family: "Modernist";
+  src: url("../fonts/modernist/Sk-Modernist-Bold.otf");
   font-weight: bold; }
 @font-face {
-  font-family: "Gravity";
-  src: url("../fonts/gravity/Gravity-Italic.otf");
-  font-style: italic; }
+  font-family: "Modernist Mono";
+  src: url("../fonts/modernist/Sk-Modernist-Mono.otf"); }
 /* primary color pallete */
 /* system fonts */
 * {
@@ -18,7 +17,7 @@ html {
   height: 100%; }
   html body {
     margin: 0;
-    font-family: "Gravity", sans-serif;
+    font-family: "Modernist", sans-serif;
     text-align: center;
     height: 100%;
     overflow: hidden;
@@ -49,12 +48,12 @@ header {
     font-size: 40px; }
   header h2 {
     font-size: 32px;
-    font-family: "Roboto Mono"; }
+    font-family: "Modernist Mono"; }
   header p {
-    font-family: "Roboto Mono"; }
+    font-family: "Modernist Mono"; }
 
 .coming-soon {
-  font-family: "Roboto Mono";
+  font-family: "Modernist Mono";
   position: absolute;
   bottom: 10px;
   right: -40px;
