--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,13 +15,13 @@
 }
 
 /* primary color pallete */
-$color1: #FFE12B;
-$color2: #1768AC;
-$white: #FFF;
+$color1: #ffe12b;
+$white: #fff;
 $black: #000;
 
 /* system fonts */
 $systemfonts: "Modernist", sans-serif;
+$secondaryfonts: "Modernist Mono";
 
 * {
   box-sizing: border-box;
@@ -29,14 +29,12 @@ $systemfonts: "Modernist", sans-serif;
 
 html {
   height: 100%;
-  
+  scroll-behavior: smooth;
+
   body {
     margin: 0;
     font-family: $systemfonts;
-    text-align: center;
-    height: 100%;
-    overflow: hidden;
-    line-height: 1.3;
+    background-color: $color1;
 
     p {
       font-size: 18px;
@@ -44,64 +42,50 @@ html {
   }
 }
 
-.container {
-  margin: 20px 150px;
+nav {
+  background-color: $black;
+  color: $color1;
+  padding: 0 10%;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 
-  img[alt="consultation"] {
-    width: 100px;
+  h1 {
+    margin: 0;
+    font-size: 25px;
+    letter-spacing: 1px;
   }
-}
 
-header, footer {
-  background-color: $color1;
-  color: $black;
-  text-align: center;
-  padding: 20px;
-  margin: 0;
+  ul {
+    list-style: none;
+
+    li {
+      display: inline;
+      padding: 10px;
+      letter-spacing: 5px;
+
+      a {
+        color: $color1;
+        text-decoration: none;
+        transition: all .5s ease;
+
+        &:hover {
+          color: $white;
+        }
+      }
+    }
+  }
 }
 
 header {
-  position: relative;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 2em;
 
   h1 {
-    font-size: 40px;
-  }
-
-  h2 {
-    font-size: 32px;
-    font-family: "Modernist Mono";
-  }
-
-  p {
-    font-family: "Modernist Mono";
+    margin: 0;
   }
 }
 
-.coming-soon {
-  font-family: "Modernist Mono";
-  position: absolute;
-  bottom: 10px;
-  right: -40px;
-  background-color: $black;
-  padding: 5px;
-  transform: rotate(-40deg);
-  display: grid;
-  place-items: center;
+// @media screen and (max-width: 510px) {
 
-  .coming-soon-text {
-    transition: all 1s ease;
-    font-weight: bold;
-    color: $color1;
-  }
-}
-
-@media screen and (max-width: 510px) {
-  body {
-    overflow: hidden;
-  }
-}
+// }
