--- a/css/main.css
+++ b/css/main.css
@@ -14,61 +14,43 @@
   box-sizing: border-box; }
 
 html {
-  height: 100%; }
+  height: 100%;
+  scroll-behavior: smooth; }
   html body {
     margin: 0;
     font-family: "Modernist", sans-serif;
-    text-align: center;
-    height: 100%;
-    overflow: hidden;
-    line-height: 1.3; }
+    background-color: #ffe12b; }
     html body p {
       font-size: 18px; }
 
-.container {
-  margin: 20px 150px; }
-  .container img[alt="consultation"] {
-    width: 100px; }
-
-header, footer {
-  background-color: #FFE12B;
-  color: #000;
-  text-align: center;
-  padding: 20px;
-  margin: 0; }
+nav {
+  background-color: #000;
+  color: #ffe12b;
+  padding: 0 10%;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%; }
+  nav h1 {
+    margin: 0;
+    font-size: 25px;
+    letter-spacing: 1px; }
+  nav ul {
+    list-style: none; }
+    nav ul li {
+      display: inline;
+      padding: 10px;
+      letter-spacing: 5px; }
+      nav ul li a {
+        color: #ffe12b;
+        text-decoration: none;
+        transition: all .5s ease; }
+        nav ul li a:hover {
+          color: #fff; }
 
 header {
-  position: relative;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
+  padding: 2em; }
   header h1 {
-    font-size: 40px; }
-  header h2 {
-    font-size: 32px;
-    font-family: "Modernist Mono"; }
-  header p {
-    font-family: "Modernist Mono"; }
-
-.coming-soon {
-  font-family: "Modernist Mono";
-  position: absolute;
-  bottom: 10px;
-  right: -40px;
-  background-color: #000;
-  padding: 5px;
-  transform: rotate(-40deg);
-  display: grid;
-  place-items: center; }
-  .coming-soon .coming-soon-text {
-    transition: all 1s ease;
-    font-weight: bold;
-    color: #FFE12B; }
-
-@media screen and (max-width: 510px) {
-  body {
-    overflow: hidden; } }
+    margin: 0; }
 
 /*# sourceMappingURL=main.css.map */
